@@ -58,8 +58,7 @@ class ConfigManager(object):
             'client.bus_timeout': 10 * 60,
             'icon.color': '#3465a4',
             'image.max_size': 10 ** 6,
-            'roundup.url': 'http://bugs.tryton.org/',
-            'roundup.xmlrpc': 'roundup-xmlrpc.tryton.org',
+            'bug.url': 'https://bugs.tryton.org/',
             'download.url': 'https://downloads.tryton.org/',
             'download.frequency': 60 * 60 * 8,
             'menu.pane': 200,
